--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,7 @@
 <nav>
   <p>
     <a href="/">home</a>
-    <a href="/writings">writings</a>
-    <a href="/projects">projects</a>
-    <a href="/now">now</a>
-    <a href="/uses">uses</a>
+    <a href="/assets/CV_HeechanLee.pdf" target="_blank">CV</a>
   </p>
 </nav>
 <style>
@@ -14,7 +11,7 @@
   }
 
   nav {
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
     text-align: right;
   }
 </style>
