--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,12 +16,12 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" , initial-scale="1" />
 
     <title>{title}</title>
-    <meta name="description" content="Your Description Goes Here." />
+    <meta name="description" content="Personal Website of Heechan Lee" />
     <meta name="generator" content={Astro.generator} />
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
 
     <meta property="og:title" content={title} />
-    <meta property="og:site_name" content="Your Name" />
+    <meta property="og:site_name" content="Heechan Lee" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content={Astro.url} />
     <!-- <meta property="og:image" content="/assets/img/" /> -->
