Remove '/public' from path

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,13 +23,13 @@ import PublicationBlock from "../components/PublicationBlock.astro";
         I look forward to contributing to various problems at the intersection of AI and Safety.
       </p>
     </div>
-    <img class="main" src="/public//assets//img/main.JPG" />
+    <img class="main" src="/assets/img/main.JPG" />
   </div>
   <div class="contacts">
     <a href="mailto::hclee99@kaist.ac.kr"><img src="/assets/img/mail_icon.svg" class="contact-icon" /></a>
     <a href="https://github.com/Gabul99" target="_blank"><img src="/assets/img/github.svg" class="contact-icon" /></a>
     <a href="https://www.linkedin.com/in/heechan-lee-0108a5217/" target="_blank"><img src="/assets/img/linkedin.svg" class="contact-icon" /></a>
-    <a href="https://x.com/heechanleekr" target="_blank"><img src="/public/assets/img/x.svg" class="contact-icon" /></a>
+    <a href="https://x.com/heechanleekr" target="_blank"><img src="/assets/img/x.svg" class="contact-icon" /></a>
     <!-- <a href=""><img src="/public/assets/img/google-scholar.svg" class="contact-icon" /></a> -->
     <a href="https://medium.com/hcleedev" target="_blank" style={{height: 'fit-content'}}>Blog (in Kor)</a>
   </div>
