--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,4 +75,11 @@ import PublicationBlock from "../components/PublicationBlock.astro";
   img.contact-icon:hover {
     opacity: 0.5;
   }
+
+  @media (max-width: 768px) {
+    img.main {
+      display: none;
+    }
+  }
+
 </style>
