--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,10 +24,10 @@ const { title } = Astro.props;
     <meta property="og:site_name" content="Heechan Lee" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content={Astro.url} />
-    <!-- <meta property="og:image" content="/assets/img/" /> -->
-    <meta property="og:image:alt" content="Your Description Goes Here." />
+    <meta property="og:image" content="/assets/img/main.JPG" />
+    <meta property="og:image:alt" content="Heechan Lee" />
     <meta property="og:locale" content="en" />
-    <meta property="og:description" content="Your Description Goes Here." />
+    <meta property="og:description" content="Personal Website of Heechan Lee" />
   </head>
   <body>
     <Header />
