Change Introduction and Add google scholar link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,16 +11,15 @@ import PublicationBlock from "../components/PublicationBlock.astro";
     <div class="intro-paragraph">
       <h1>Heechan Lee</h1>
       <p>
-        I'm senior undergrad student of <a href="https://cs.kaist.ac.kr/" target="_blank">School of Computing</a> at <a href="https://www.kaist.ac.kr/" target="_blank">KAIST</a>.
-        I'm currently working in <a href="https://www.kixlab.org" target="_blank">KAIST Interaction Lab(KIXLAB)</a> as undergraduate research intern.
-        <br />
-        I am set to begin my MS program at KAIST SoC in 2025, as a member of both <a href="https://www.kixlab.org" target="_blank">KIXLAB</a> and <a href="https://cstlab.org/" target="_blank">Collaborate Social Technologies Lab(CSTL)</a>,
-        where I will be co-advised by <a href="https://juhokim.com/" target="_blank">Prof. Juho Kim</a> and <a href="https://joseph.seering.org/" target="_blank">Prof. Joseph Seering</a>.
+        I'm a MS student of <a href="https://cs.kaist.ac.kr/" target="_blank">School of Computing</a> at <a href="https://www.kaist.ac.kr/" target="_blank">KAIST</a>.
+        I'm working in <a href="https://cstlab.org/" target="_blank">Collaborate Social Technologies Lab(CSTL)</a> and <a href="https://www.kixlab.org" target="_blank">KAIST Interaction Lab(KIXLAB)</a>, where I'm advised by <a href="https://joseph.seering.org/" target="_blank">Prof. Joseph Seering</a> and <a href="https://juhokim.com/" target="_blank">Prof. Juho Kim</a>.
         <br />
         <br />
-        My research interest lies in Human-AI Interaction field, especially LLM Response Evaluation, and AI Training Dataset Optimization.
-        I am interested in solving problems that people face through AI, as well as dealing with challenges that arise from using AI itself.
-        I look forward to contributing to various problems at the intersection of AI and Safety.
+        My research interest lies in <b>Human-AI Interaction</b> field.
+        Now I'm mainly interested in creating systems that can support users to ensure LLMs align with user's preference, and evaluate the LLM behaviors.
+        In addition, I'm so curious how AI agent can change the experience of software engineering.
+        <br />
+        I look forward to contributing to various problems at the intersection of human, AI and safety.
       </p>
     </div>
     <img class="main" src="/assets/img/main.JPG" />
@@ -30,7 +29,7 @@ import PublicationBlock from "../components/PublicationBlock.astro";
     <a href="https://github.com/Gabul99" target="_blank"><img src="/assets/img/github.svg" class="contact-icon" /></a>
     <a href="https://www.linkedin.com/in/heechan-lee-0108a5217/" target="_blank"><img src="/assets/img/linkedin.svg" class="contact-icon" /></a>
     <a href="https://x.com/heechanleekr" target="_blank"><img src="/assets/img/x.svg" class="contact-icon" /></a>
-    <!-- <a href=""><img src="/public/assets/img/google-scholar.svg" class="contact-icon" /></a> -->
+    <a href="https://scholar.google.com/citations?user=O6BiJGkAAAAJ&hl=en" target="_blank"><img src="/public/assets/img/google-scholar.svg" class="contact-icon" /></a>
     <a href="https://medium.com/hcleedev" target="_blank" style={{height: 'fit-content'}}>Blog (in Kor)</a>
   </div>
   <News />
