fix google scholar icon path and add korean name

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import PublicationBlock from "../components/PublicationBlock.astro";
 <Layout title="Heechan Lee">
   <div class="introduction">
     <div class="intro-paragraph">
-      <h1>Heechan Lee</h1>
+      <h1>Heechan Lee, 이희찬</h1>
       <p>
         I'm a MS student of <a href="https://cs.kaist.ac.kr/" target="_blank">School of Computing</a> at <a href="https://www.kaist.ac.kr/" target="_blank">KAIST</a>.
         I'm working in <a href="https://cstlab.org/" target="_blank">Collaborate Social Technologies Lab(CSTL)</a> and <a href="https://www.kixlab.org" target="_blank">KAIST Interaction Lab(KIXLAB)</a>, where I'm advised by <a href="https://joseph.seering.org/" target="_blank">Prof. Joseph Seering</a> and <a href="https://juhokim.com/" target="_blank">Prof. Juho Kim</a>.
@@ -29,7 +29,7 @@ import PublicationBlock from "../components/PublicationBlock.astro";
     <a href="https://github.com/Gabul99" target="_blank"><img src="/assets/img/github.svg" class="contact-icon" /></a>
     <a href="https://www.linkedin.com/in/heechan-lee-0108a5217/" target="_blank"><img src="/assets/img/linkedin.svg" class="contact-icon" /></a>
     <a href="https://x.com/heechanleekr" target="_blank"><img src="/assets/img/x.svg" class="contact-icon" /></a>
-    <a href="https://scholar.google.com/citations?user=O6BiJGkAAAAJ&hl=en" target="_blank"><img src="/public/assets/img/google-scholar.svg" class="contact-icon" /></a>
+    <a href="https://scholar.google.com/citations?user=O6BiJGkAAAAJ&hl=en" target="_blank"><img src="/assets/img/google-scholar.svg" class="contact-icon" /></a>
     <a href="https://medium.com/hcleedev" target="_blank" style={{height: 'fit-content'}}>Blog (in Kor)</a>
   </div>
   <News />
