Evaligner + CV update

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <nav>
   <p>
-    <a href="/">home</a>
+    <!-- <a href="/">home</a> -->
     <a href="/assets/CV_HeechanLee.pdf" target="_blank">CV</a>
   </p>
 </nav>
