fix typo in news and update introduction

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,10 +16,12 @@ import PublicationBlock from "../components/PublicationBlock.astro";
         <br />
         <br />
         My research interest lies in <b>Human-AI Interaction</b> field.
-        Now I'm mainly interested in creating systems that can support users to ensure LLMs align with user's preference, and evaluate the LLM behaviors.
+        I envision ways to make AI systems easier and more accurate to use in the way users intend.
+        It makes me explore how we can help people understand data, evaluate model behaviors, and improve them through interactive systems.
+        I am currently interested in creating systems that support users in deeply understanding qualitative data by leveraging LLMs, and in evaluating large sets of LLM responses using user-defined criteria.
         In addition, I'm so curious how AI agent can change the experience of software engineering.
         <br />
-        I look forward to contributing to various problems at the intersection of human, AI and safety.
+        I look forward to contributing to various problems at the intersection of human, AI and data.
       </p>
     </div>
     <img class="main" src="/assets/img/main.JPG" />
