--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,15 +17,13 @@ const grouped = {
     <div class="intro-paragraph">
       <h1>Heechan Lee, 이희찬</h1>
       <p>
-        I'm a MS student of <a href="https://cs.kaist.ac.kr/" target="_blank">School of Computing</a> at <a href="https://www.kaist.ac.kr/" target="_blank">KAIST</a>.
+        I'm a Master's student in the <a href="https://cs.kaist.ac.kr/" target="_blank">School of Computing</a> at <a href="https://www.kaist.ac.kr/" target="_blank">KAIST</a>.
         I'm working in <a href="https://cstlab.org/" target="_blank">Collaborative Social Technologies Lab(CSTL)</a> and <a href="https://www.kixlab.org" target="_blank">KAIST Interaction Lab(KIXLAB)</a>, where I'm advised by <a href="https://joseph.seering.org/" target="_blank">Prof. Joseph Seering</a> and <a href="https://juhokim.com/" target="_blank">Prof. Juho Kim</a>.
         <br />
         <br />
-        My research interest lies in <b>Human-AI Interaction</b> field.
-        I envision ways to make AI systems easier and more accurate to use in the way users intend.
-        It makes me explore how we can help people understand data, evaluate model behaviors, and improve them through interactive systems.
-        I am currently interested in creating systems that support users in deeply understanding qualitative data by leveraging LLMs, and in evaluating large sets of LLM responses using user-defined criteria.
-        In addition, I'm so curious how AI agent can change the experience of software engineering.
+        My research interest lies in <b>Human-AI Interaction</b> field, with a focus on designing interactive systems that enable users to understand and steer AI in the way users intend.
+        I study how users engage in sensemaking and evaluation of large volumes of data (e.g., AI-generated responses) to identify issues and provide meaningful feedback.
+        Ultimately, my goal is to build systems that effectively incorporate user intent across the <i>sensemaking–evaluation–feedback</i> process.
         <br />
         I look forward to contributing to various problems at the intersection of human, AI and data.
       </p>
